objects/ssot__DeviceApplicationTemplate__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceApplicationTemplateBodyTxt__c</fullName>
        <label>Device ApplicationTemplate Body</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementAssetNbr__c</fullName>
        <label>Engagement Asset Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementAssetTypeId__c</fullName>
        <label>Engagement Asset Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementMessageTypeId__c</fullName>
        <label>Engagement Message Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Device Application Template Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MessageFormatTypeId__c</fullName>
        <label>Message Format Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentEngagementAssetId__c</fullName>
        <label>Parent Engagement Asset</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SendMethodTypeId__c</fullName>
        <label>Send Method Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761167530_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DeviceApplicationTemplate_Id_map_Dev_rel</label>
        <referenceTo>ssot__DeviceApplicationTemplate__dlm</referenceTo>
        <relationshipLabel>DeviceApplicationTemplate_Id_map_Dev_rel</relationshipLabel>
        <relationshipName>rel_1697761167530_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761168402_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DeviceApplicationTemplate_ParentEnga_rel</label>
        <referenceTo>ssot__DeviceApplicationTemplate__dlm</referenceTo>
        <relationshipLabel>DeviceApplicationTemplate_ParentEnga_rel</relationshipLabel>
        <relationshipName>rel_1697761168402_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761168485_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DeviceApplicationTemplate_ParentEnga_rel</label>
        <referenceTo>ssot__EmailTemplate__dlm</referenceTo>
        <relationshipLabel>DeviceApplicationTemplate_ParentEnga_rel</relationshipLabel>
        <relationshipName>rel_1697761168485_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>